--- a/app/views/projects/_list_projects_default.html.erb
+++ b/app/views/projects/_list_projects_default.html.erb
@@ -1,4 +1,9 @@
-
+<style type="text/css">
+    .ui-widget-header {
+      background: #4DD257;
+			border-radius: 5px;
+    }
+</style>
 
 <br />
 <br />
@@ -16,20 +21,31 @@
         <p class="info"><%= image_tag("calendar_icon.png") %> <strong>Término previsto:</strong> <%= l project.end_date %></p>
         <p class="info"><%= image_tag("team_icon.png") %> <strong>Membros:</strong> <%= project.members_number %></p>
         <p class="info"><%= image_tag("sprint_icon.png") %> <strong>Sprint atual:</strong> 
-        <% if project.current_sprint.nil? %> 
+         <% if project.current_sprint.nil? %> 
              -
         <% else %>
         <%= project.current_sprint %>
         <% end %></p>
-        <p></p>
-        <div class="bar_progress" id="project-progress" data-percent="<%= project.progress %>">
-          <div class="bar"></div>
-          <div class="label">
-            <%= project.progress %>%
-          </div>
-        </div>
+       
+       <br />
+        <div id="progressbar" class="ui-progressbar-value ui-widget-header ui-corner-left" style="border: 1px solid black; color: black; height:30px; padding-top: 10px; text-align: center; width:<%= project.progress %>%;">
+       <%= project.progress %>%
+        </div>       
+        <br />
+          <p>
+         <% if project.end_date < Time.now && project.current_sprint %>
+            <div class="button_warning" title="Existem tarefas em atraso">
+                <b> Projeto atrasado </b>   
+            </div> 
+           <% else %>
+            <div class="button_status">
+                <b> Sem alertas </b>   
+            </div> 
+           <% end %>
+        </p>
       </div>
     </div>
+    <!-- <%= project.progress %> -->
 
     <button class="button_card" onclick="window.location.href='<%= select_project_path(project) %>'">
       Administrar
@@ -38,7 +54,10 @@
   
 <% end %>
 
-
-<script type="text/javascript">
-  $('.progress').progress();
+<script>
+    $(function() {
+        $("#progressbar").progressbar({
+            value: project.progress
+        });
+    });
 </script>
