--- a/app/views/projects/_modal_tasks.html.erb
+++ b/app/views/projects/_modal_tasks.html.erb
@@ -1,21 +1,7 @@
 <!-- MODAL TAREFA -->
-<div class="ui small modal usertory-<%= us.id %>">
-  
+<div class="<%= us.id %>">
   <div class="header">
- US-<%= us.project.initial%>-<%= us.id %> <%= us.title %>
-  </div>
-  
-  <div class="content">
-    <div class="ui grid">
-      <div class="row">
-        <div class="sixteen wide tablet sixteen wide computer column">
-          <p>
-            <strong>Descrição:</strong>
-            <%= us.description %>    
-          </p>
-        </div>
-      </div>
-    </div> 
+     US-<%= us.project.initial%>-<%= us.id %> <%= us.title %>
   </div>
 </div> 
 <!-- /MODAL TAREFA -->
