--- a/app/views/user_sprint_notifier_mailer/send_late_sprint_email.html.erb
+++ b/app/views/user_sprint_notifier_mailer/send_late_sprint_email.html.erb
@@ -6,7 +6,7 @@
 
   <body>
     <h1>Olá!</h1>
-    <p>A entrega da sprint <strong><%= @sprint.name %></strong> está atrasada .</p>
+    <p>A sprint <strong><%= @sprint.name %></strong> foi atualizada com sucesso.</p>
     <p>Havendo dúvidas contate o administrador.</p>
     <br />
     <p>Equipe Agile Kronos.</p>
