--- a/app/views/releases/edit.html.erb
+++ b/app/views/releases/edit.html.erb
@@ -2,12 +2,13 @@
 
 <div class="container">
   <div class="ui menu">
-    <a href="#" class="item active"><strong>Editando release</strong></a>
+  <br />
+    <h2>Editando release</h2>
+    <br />
 
   </div>
 
   <%= render 'form' %>
      <br />
-    <%= link_to 'Salvar', '#', class: 'item save ui blue button' %>
-    <%= link_to 'Cancelar', releases_path, class: 'item ui red button' %>
+
 </div>
