Ajuste deleção de relacionamento

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -355,8 +355,6 @@ div#notification_inactived {
     font-size: 16px;
 }
 
-
-
 .orange_button{
     background-color: #f36d2e;
     border-radius: 10px;
@@ -573,8 +571,6 @@ table {
 td, th {
   border: 1px solid #ddd;
   padding: 8px;
-  min-width: 180px;
-  max-width: 180px;
 }
 
 tr:nth-child(even){
@@ -589,7 +585,7 @@ th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #6d6d6d;
+  background-color: rgb(100, 149, 237);
   color: white;
 }
 
