--- a/app/views/projects/_list_projects_default.html.erb
+++ b/app/views/projects/_list_projects_default.html.erb
@@ -45,10 +45,10 @@
         </p>
       </div>
     </div>
-    <!-- <%= project.progress %> -->
+
 
     <button class="button_card" onclick="window.location.href='<%= select_project_path(project) %>'">
-      Administrar
+      Acessar
     </button>
   </div>
   
