--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -27,9 +27,9 @@
   <table>
     <thead>
       <tr>
-        <th>Version</th>
-        <th>Data de entrega</th>
-        <th >Ações</th>
+        <th width="260">Version</th>
+        <th width="260">Data de entrega</th>
+        <th width="260">Ações</th>
       </tr>
     </thead>
 
