--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,10 +20,10 @@
   <table>
     <thead>
       <tr>
-          <th>Nome</th>
-          <th>Email</th>
-          <th>Grupo</th>
-          <th width="250">Ações</th>
+          <th width="180">Nome</th>
+          <th width="180">Email</th>
+          <th width="180">Grupo</th>
+          <th width="210">Ações</th>
       </tr>
     </thead>
 
