--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -30,7 +30,7 @@
 
             <%= f.submit "Recuperar de senha", id: "button" %>
         </div>
-        <footer>
+        <%# <footer>
             <ul>
               <li>
                   <a href="../../about.html" target="_blank">Conheça o Kronos</a>
@@ -42,7 +42,7 @@
                   <a href="#">FAQ</a>
               </li>
             </ul>
-        </footer>
+        </footer> %>
     </body>
 </html>
 
