--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,28 +14,27 @@
 	  <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.13.1.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>   
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 
 </head>
 
-<body onload="myFunction()" style="margin:0;">
+<body>
 
     <% if !user_signed_in? %>
       <%= render 'layouts/default_top_menu_bar' %>
       <%= yield %>
-      <%= render 'layouts/footer' %>
+     
     <% else %>
       <%= render 'layouts/user_top_menu_bar' %>
       <%= render 'layouts/admin_side_bar' if current_user.group == 'admin' %>
       <%= render 'layouts/user_side_bar' if current_user.group != 'admin' %>
 
       <!-- content -->
-    
 
       <%= render 'layouts/alert_messages' %>
         <%= yield %>
@@ -44,16 +43,5 @@
 </body>
 </html>
  
-<script>
-var myVar;
 
-function myFunction() {
-  myVar = setTimeout(showPage);
-}
-
-function showPage() {
-  document.getElementById("loader").style.display = "none";
-  document.getElementById("myDiv").style.display = "block";
-}
-</script>
 
