--- a/app/views/sprints/_form.html.erb
+++ b/app/views/sprints/_form.html.erb
@@ -3,7 +3,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
 
-<%= form_for(@sprint, html: {class: 'ui form'}) do |f| %>
+<%= form_for(@sprint, html: {class: 'form'}) do |f| %>
 
   <% if @sprint.errors.any? %>
         <div class="alert_danger">
